chore: add .gitignore for system and large data files

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,19 @@
-.Rproj.user
-.Rhistory
-.RData
-.Ruserdata
+# Mac system files
+.DS_Store
+
+# Large genomics files
+*.bw
+*.wig
+*.bam
+*.bai
+*.fastq*
+*.fq
+*.sam
+*.gz
+*.tar
+*.zip
+
+# RStudio / R-specific files
+*.RData
+*.Rhistory
+*.Rproj.user/
